# MacSpoofer

./: .gitignore  Dockerfile  LICENSE  README.md  build_docker.bat  build_docker.sh  main.py  pyproject.toml  requirements.txt  setup.sh  spoofer.py
.github/workflows/: claude-code-review.yml  claude.yml  linux-ci.yml  publish.yml
macspoofer/: __init__.py  cli.py  spoofer.py
macspoofer/data/: vendors.json
macspoofer/modules/: args_parser.py  error_config.py  interface.py
macspoofer/utils/: exceptions.py  shell_utils.py  vendors.py
scripts/: update_vendor_db.py
src/: interface.py  pretty_errors_handler.py  random_utils.py  shell_utils.py  spoofer.py  vendors.py
src/modules/: args_parser.py  error_config.py  interface.py  pretty_errors_handler.py
src/utils/: random_utils.py  shell_utils.py  vendors.py
