[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "macspoofer"
dynamic = ["version"]
description = "A command-line tool to spoof your network interface's MAC address on Linux systems."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Daniel Kirshner" },
]
keywords = ["mac", "spoofer", "network", "security", "linux", "mac-address"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: Security",
]
dependencies = [
    "rich>=14.0.0",
    "pretty-errors>=1.2.25",
    "art>=6.0",
]

[project.urls]
Homepage = "https://github.com/DanielKirshner/MacSpoofer"
Repository = "https://github.com/DanielKirshner/MacSpoofer"
Issues = "https://github.com/DanielKirshner/MacSpoofer/issues"

[project.scripts]
macspoofer = "macspoofer.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "macspoofer/_version.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["macspoofer"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
